<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">家信</string>

    <string name="copyright">家信 v0.0.1 ©2016 九爱科技</string>
    <!-- register screen  -->
    <string name="register">用户注册</string>
    <string name="login_hint_cellphone">手机号码</string>
    <string name="login_hint_password">登录密码</string>
    <string name="login_hint_new_password">设置密码</string>
    <string name="login_hint_confirm_password">确认密码</string>
    <string name="login_hint_verify_code">验证码</string>
    <string name="login_verify_code_sent">包含验证码的短信已发送到您的手机</string>
    <string name="login_error_cellphone_invalid">手机号码格式不正确</string>
    <string name="network_failure">网络连接失败</string>
    <string name="login_action_switch_sign_in">已有账号</string>
    <string name="login_action_switch_forgot_password">忘记密码</string>
    <string name="login_action_switch_create_account">注册账号</string>
    <string name="login_action_sign_in">登录</string>
    <string name="login_action_retrieve">密码重置</string>
    <string name="login_action_register">用户注册</string>

    <string name="login_check_remember">记住</string>

    <!--好友页-->
    <string name="contact_invitation_caption">联系人添加</string>
    <string name="contact_operation_caption">联系人操作</string>
    <string name="friend_load">获取好友列表</string>
    <string name="friend_phone_hint">输入对方的手机号码</string>

    <string name="action_in_process">请稍候…</string>
    <string name="contact_invitation_send">发送邀请</string>

</resources>
