<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="invitationManager"
            type="com.ivollo.chatcore.contacts.InvitationManager" />
    </data>

    <carbon.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <!-- Toolbar -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ivollo.familychat.commons.view.ToolbarBackButton style="@style/ToolbarIconButton.Back" />

            <TextView
                style="@style/Text.Inverse"
                android:text="@string/contact_invitation_caption" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@color/background_light"
            android:orientation="vertical"
            android:padding="@dimen/dp_16"
            app:carbon_cornerRadius="@dimen/dp_4"
            app:carbon_elevation="@dimen/dp_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    style="@style/EditTextIcon"
                    app:materialIcon="cellphone_android" />

                <EditText
                    android:id="@+id/login"
                    style="@style/EditText"
                    android:hint="@string/friend_phone_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    app:bindEditText="@{invitationManager.cellphoneToInvite}"
                    app:carbon_floatingLabel="true" />

            </LinearLayout>

            <carbon.widget.Button
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_8"
                android:enabled="@{!invitationManager.inviteInProcess}"
                android:minWidth="@dimen/dp_128"
                android:text="@string/contact_invitation_send"
                app:carbon_cornerRadius="@dimen/dp_8"
                app:onClick="@{invitationManager.invite}" />

        </LinearLayout>
    </carbon.widget.LinearLayout>
</layout>