<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginVM"
            type="com.ivollo.familychat.login.LoginVM" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <!-- Toolbar -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<com.ivollo.familychat.base.view.ToolbarBackButton style="@style/ToolbarIconButton.Back" />-->

            <TextView
                style="@style/Text.Inverse"
                android:text="用户登录" />

        </FrameLayout>


        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/background_light"
                android:orientation="vertical"
                android:padding="@dimen/dp_16"
                app:carbon_cornerRadius="@dimen/dp_4"
                app:carbon_elevation="@dimen/dp_4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        style="@style/EditTextIcon"
                        app:materialIcon="cellphone_android" />

                    <EditText
                        android:id="@+id/login"
                        style="@style/EditText"
                        android:hint="@string/login_hint_cellphone"
                        android:inputType="number"
                        android:maxLength="11"
                        app:bindEditText="@{loginVM.username}"
                        app:carbon_floatingLabel="true" />

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/hide_keyboard"
                        style="@style/IconButton"
                        android:layout_height="match_parent"
                        app:materialIcon="keyboard_off"
                        app:materialIconColor="@color/check_icon_unchecked" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        style="@style/EditTextIcon"
                        app:materialIcon="key" />

                    <EditText
                        android:id="@+id/password"
                        style="@style/EditText"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        app:bindEditText="@{loginVM.password}"
                        app:carbon_floatingLabel="true" />

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/check_password_visible"
                        style="@style/IconButton"
                        app:materialIcon="eye" />
                </LinearLayout>

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_8"
                    android:enabled="@{!loginVM.loginInProgress}"
                    android:minWidth="@dimen/dp_128"
                    android:onClick="@{loginVM.login}"
                    android:text="@{loginVM.loginBtnText, default=@string/login_action_sign_in}"
                    app:carbon_cornerRadius="@dimen/dp_8" />

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_8"
                    android:enabled="@{!loginVM.loginInProgress}"
                    android:minWidth="@dimen/dp_128"
                    android:onClick="@{loginVM.register}"
                    android:text="@{loginVM.registerBtnText, default=@string/login_action_register}"
                    app:carbon_cornerRadius="@dimen/dp_8" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:orientation="horizontal"
                    app:carbon_cornerRadius="@dimen/dp_8">

                    <Button
                        android:id="@+id/switch_retrieve"
                        style="@style/Button.Flat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_action_retrieve"
                        android:textSize="@dimen/dp_12" />

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="|"
                        android:textSize="@dimen/dp_12"/>

                    <Button
                        android:id="@+id/switch_register"
                        style="@style/Button.Flat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_action_register"
                        android:textSize="@dimen/dp_12"/>-->
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include layout="@layout/company_footer" />
    </FrameLayout>
</layout>